ssl for dev2,dev,prod

--- a/apache/dev-clarin.it.ilc.cnr.it-ssl.conf
+++ b/apache/dev-clarin.it.ilc.cnr.it-ssl.conf
@@ -4,13 +4,13 @@
 <IfModule mod_ssl.c>
 #<IfModule mod_shib>
 	<VirtualHost *:443>
-		ServerName dev2-clarin.ilc.cnr.it
-	    ServerAlias dev2-clarin.ilc.cnr.it
+		ServerName dev-clarin.ilc.cnr.it
+	    ServerAlias dev-clarin.ilc.cnr.it
         ServerAdmin webmaster@localhost
-        DocumentRoot /var/www/dev2-clarin
+        DocumentRoot /var/www/dev-clarin
 
 		        
-		#THIS IS TO DECOMMENT ScriptAlias /cgi-bin/ /var/www/dev2-clarin/secure/
+		#THIS IS TO DECOMMENT ScriptAlias /cgi-bin/ /var/www/dev-clarin/secure/
         RewriteEngine On
 
 		# handle cmdi requests with redirects
@@ -18,11 +18,11 @@
 
 		RewriteCond %{HTTP_ACCESS} (.*cmdi.xml.*)
 		RewriteCond %{REQUEST_URI} ^(.*)/xmlui/handle/(.*)$
-		RewriteRule ^(.*)/xmlui/handle/(.*)$ https://dev2-clarin.ilc.cnr.it$1/oai/cite?metadataPrefix=cmdi&handle=$2 [R,L]
+		RewriteRule ^(.*)/xmlui/handle/(.*)$ https://dev-clarin.ilc.cnr.it$1/oai/cite?metadataPrefix=cmdi&handle=$2 [R,L]
 
 		RewriteCond %{QUERY_STRING} format=cmdi [NC]
 		RewriteCond %{REQUEST_URI} ^(.*)/xmlui/handle/(.*)$
-		RewriteRule ^(.*)/xmlui/handle/(.*)$ https://dev2-clarin.ilc.cnr.it$1/oai/cite?metadataPrefix=cmdi&handle=$2 [R,L]
+		RewriteRule ^(.*)/xmlui/handle/(.*)$ https://dev-clarin.ilc.cnr.it$1/oai/cite?metadataPrefix=cmdi&handle=$2 [R,L]
 
 		RewriteCond %{REQUEST_URI} ^/repository$
 		RewriteRule (.*) /repository/xmlui [R,L]
@@ -38,15 +38,15 @@
 		#LogLevel info ssl:warn
 		LogLevel info ssl:debug
 
-		ErrorLog ${APACHE_LOG_DIR}/dev2-clarin-error.log
-		CustomLog ${APACHE_LOG_DIR}/dev2-clarin-access.log combined
+		ErrorLog ${APACHE_LOG_DIR}/dev-clarin-error.log
+		CustomLog ${APACHE_LOG_DIR}/dev-clarin-access.log combined
 
         #THIS IS TO DECOMMENT ProxyPass  /Shibboleth.sso !
 
         # These configurations say: By default, redirect ALL requests to port 8009
         # (The port MUST match the port of your Tomcat AJP Connector. By default this usually is 8009)
-        ProxyPass         /repository  ajp://dev2-clarin.ilc.cnr.it:8009/repository
-        ProxyPassReverse  /repository  ajp://dev2-clarin.ilc.cnr.it:8009/repository
+        ProxyPass         /repository  ajp://dev-clarin.ilc.cnr.it:8009/repository
+        ProxyPassReverse  /repository  ajp://dev-clarin.ilc.cnr.it:8009/repository
 
 
 		# For most configuration files from conf-available/, which are
@@ -87,8 +87,8 @@
 		#   If both key and certificate are stored in the same file, only the
 		#   SSLCertificateFile directive is needed.
 
-		SSLCertificateFile    /etc/apache2/ssl/autofirmati/dev2-clarin.crt
-		SSLCertificateKeyFile /etc/apache2/ssl/autofirmati/dev2-clarin.key
+		SSLCertificateFile    /etc/apache2/ssl/autofirmati/dev-clarin.crt
+		SSLCertificateKeyFile /etc/apache2/ssl/autofirmati/dev-clarin.key
 
 		#   Server Certificate Chain:
 		#   Point SSLCertificateChainFile at a file containing the
@@ -99,7 +99,7 @@
 		#   certificate for convinience.
 		#SSLCertificateChainFile /etc/apache2/ssl.crt/server-ca.crt
 
-		#SSLCertificateChainFile /etc/apache2/ssl/dev2-clarin_ilc_cnr_it/DigiCertCA.crt
+		#SSLCertificateChainFile /etc/apache2/ssl/dev-clarin_ilc_cnr_it/DigiCertCA.crt
 ###             SSLCertificateChainFile /etc/apache2/ssl/lets-ca.pem
 
 		#   Certificate Authority (CA):
@@ -173,7 +173,7 @@
 
 
 		#THIS IS TO DECOMMENT
-		#include ../conf-enabled/shib-dev2-clarin.conf
+		#include ../conf-enabled/shib-dev-clarin.conf
  		
 
 
