--- a/apache/dev2-clarin.it.ilc.cnr.it.conf
+++ b/apache/dev2-clarin.it.ilc.cnr.it.conf
@@ -42,6 +42,11 @@
 
 	ProxyPass         /repository  ajp://dev2-clarin.ilc.cnr.it:8009/repository
 	ProxyPassReverse  /repository  ajp://dev2-clarin.ilc.cnr.it:8009/repository
+	
+	# for testing purposes proxy 80 to 8080 for the manager GUI
+        ProxyPass         /manager/html/  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
+	ProxyPassReverse  /manager/html/  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
+	
 
 
 	#RewriteLog "/var/log/apache2/rewrite.log"
