--- a/apache/dev-clarin.it.ilc.cnr.it-ssl.conf
+++ b/apache/dev-clarin.it.ilc.cnr.it-ssl.conf
@@ -161,6 +161,12 @@
 				SSLOptions +StdEnvVars
 		</Directory>
 
+		# for testing purposes proxy 80 to 8080 for the manager GUI
+        ProxyPass         /manager/  ajp://dev-clarin.ilc.cnr.it:8009/manager/html
+		ProxyPassReverse  /manager/  ajp://dev-clarin.ilc.cnr.it:8009/manager/html
+		ProxyPass         /host-manager  ajp://dev-clarin.ilc.cnr.it:8009/host-manager
+		ProxyPassReverse  /host-manager  ajp://dev-clarin.ilc.cnr.it:8009/host-manager
+
 		
 	
 
