--- a/apache/dev2-clarin.it.ilc.cnr.it-ssl.conf
+++ b/apache/dev2-clarin.it.ilc.cnr.it-ssl.conf
@@ -154,6 +154,13 @@
 		#	 This enables optimized SSL connection renegotiation handling when SSL
 		#	 directives are used in per-directory context.
 		#SSLOptions +FakeBasicAuth +ExportCertData +StrictRequire
+
+		# for testing purposes proxy 80 to 8080 for the manager GUI
+        ProxyPass         /manager/  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
+		ProxyPassReverse  /manager/  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
+		ProxyPass         /host-manager  ajp://dev2-clarin.ilc.cnr.it:8009/host-manager
+		ProxyPassReverse  /host-manager  ajp://dev2-clarin.ilc.cnr.it:8009/host-manager
+
 		<FilesMatch "\.(cgi|shtml|phtml|php)$">
 				SSLOptions +StdEnvVars
 		</FilesMatch>
