--- a/apache/dev2-clarin.it.ilc.cnr.it.conf
+++ b/apache/dev2-clarin.it.ilc.cnr.it.conf
@@ -44,8 +44,10 @@
 	ProxyPassReverse  /repository  ajp://dev2-clarin.ilc.cnr.it:8009/repository
 	
 	# for testing purposes proxy 80 to 8080 for the manager GUI
-        ProxyPass         /manager/html/  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
-	ProxyPassReverse  /manager/html/  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
+        ProxyPass         /manager/  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
+	ProxyPassReverse  /manager/  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
+	ProxyPass         /host-manager  ajp://dev2-clarin.ilc.cnr.it:8009/host-manager
+	ProxyPassReverse  /host-manager  ajp://dev2-clarin.ilc.cnr.it:8009/host-manager
 	
 
 
