--- a/apache/dev-clarin.it.ilc.cnr.it.conf
+++ b/apache/dev-clarin.it.ilc.cnr.it.conf
@@ -43,6 +43,12 @@
 	ProxyPass         /repository  ajp://dev-clarin.ilc.cnr.it:8009/repository
 	ProxyPassReverse  /repository  ajp://dev-clarin.ilc.cnr.it:8009/repository
 
+	# for testing purposes proxy 80 to 8080 for the manager GUI
+        ProxyPass         /manager/  ajp://dev-clarin.ilc.cnr.it:8009/manager/html
+	ProxyPassReverse  /manager/  ajp://dev-clarin.ilc.cnr.it:8009/manager/html
+	ProxyPass         /host-manager  ajp://dev-clarin.ilc.cnr.it:8009/host-manager
+	ProxyPassReverse  /host-manager  ajp://dev-clarin.ilc.cnr.it:8009/host-manager
+
 
 	#RewriteLog "/var/log/apache2/rewrite.log"
 	#RewriteLogLevel 3
