Added lets encrypt certs

--- a/apache/dev2-clarin.it.ilc.cnr.it-ssl.conf
+++ b/apache/dev2-clarin.it.ilc.cnr.it-ssl.conf
@@ -90,6 +90,13 @@
 		SSLCertificateFile    /etc/apache2/ssl/autofirmati/dev2-clarin.crt
 		SSLCertificateKeyFile /etc/apache2/ssl/autofirmati/dev2-clarin.key
 
+		# LETSENCRYPT
+		SSLCertificateFile    /etc/letsencrypt/archive/dev2-clarin.ilc.cnr.it/cert1.pem
+		SSLCertificateKeyFile /etc/letsencrypt/archive/dev2-clarin.ilc.cnr.it/privkey1.pem
+
+
+
+
 		#   Server Certificate Chain:
 		#   Point SSLCertificateChainFile at a file containing the
 		#   concatenation of PEM encoded CA certificates which form the
