15/05/2020 redone the readme.md and adjusted conf files, in terms of layout

--- a/apache/dev/dev-clarin.it.ilc.cnr.it.conf
+++ b/apache/dev/dev-clarin.it.ilc.cnr.it.conf
@@ -6,8 +6,8 @@
         # match this virtual host. For the default virtual host (this file) this
         # value is not decisive as it is used as a last resort host regardless.
         # However, you must set it for any further virtual host explicitly.
-        #ServerName www.example.com
-
+        ServerName dev-clarin.ilc.cnr.it
+	ServerAlias dev-clarin.ilc.cnr.it
         ServerAdmin webmaster@localhost
         DocumentRoot /var/www/dev-clarin
 
@@ -30,39 +30,11 @@
         Options +FollowSymLinks
         RewriteEngine on
 
-	# handle cmdi requests with redirects
-        RewriteCond %{HTTP_ACCESS} (.*cmdi.xml.*)
-        RewriteCond %{REQUEST_URI} ^(.*)/xmlui/handle/(.*)$
-        RewriteRule ^(.*)/xmlui/handle/(.*)$ https://dev-clarin.ilc.cnr.it$1/oai/cite?metadataPrefix=cmdi&handle=$2 [R,L]
-
-        RewriteCond %{QUERY_STRING} format=cmdi [NC]
-        RewriteCond %{REQUEST_URI} ^(.*)/xmlui/handle/(.*)$
-        RewriteRule ^(.*)/xmlui/handle/(.*)$ https://dev-clarin.ilc.cnr.it$1/oai/cite?metadataPrefix=cmdi&handle=$2 [R,L]
-
-
-	ProxyPass         /repository  ajp://dev-clarin.ilc.cnr.it:8009/repository
-	ProxyPassReverse  /repository  ajp://dev-clarin.ilc.cnr.it:8009/repository
-
+	
 	# for testing purposes proxy 80 to 8080 for the manager GUI
-        ProxyPass         /manager/  ajp://dev-clarin.ilc.cnr.it:8009/manager/html
-	ProxyPassReverse  /manager/  ajp://dev-clarin.ilc.cnr.it:8009/manager/html
+        ProxyPass         /manager  ajp://dev-clarin.ilc.cnr.it:8009/manager/html
+	ProxyPassReverse  /manager  ajp://dev-clarin.ilc.cnr.it:8009/manager/html
 	ProxyPass         /host-manager  ajp://dev-clarin.ilc.cnr.it:8009/host-manager
 	ProxyPassReverse  /host-manager  ajp://dev-clarin.ilc.cnr.it:8009/host-manager
-
-
-	#RewriteLog "/var/log/apache2/rewrite.log"
-	#RewriteLogLevel 3
-
-
-	RewriteCond %{HTTPS} off
-
-	RewriteCond %{REQUEST_URI} ^/repository$
-	RewriteRule (.*)  https://%{SERVER_NAME}/repository/xmlui [R,L]
-
-
-	RewriteCond %{REQUEST_URI} !^/repository/oai$
-	RewriteCond %{REQUEST_URI} !^/repository/oai.+$
-	#RewriteRule (.*) https://%{SERVER_NAME}$1 [R,L]
+	
 </VirtualHost>
-
-
