--- a/apache/dev2/dev2-clarin.it.ilc.cnr.it-ssl.conf
+++ b/apache/dev2/dev2-clarin.it.ilc.cnr.it-ssl.conf
@@ -1,5 +1,5 @@
 # after shibboleth is installed, 
-# 1 comment mod_ssl and decomment mod_shib
+# 1 comment mod_ssl and uncomment mod_shib
 # 2 decomment any section related to shib (see comments below)
 <IfModule mod_ssl.c>
 #<IfModule mod_shib>
@@ -10,26 +10,14 @@
         DocumentRoot /var/www/dev2-clarin
 
 		        
-		#THIS IS TO DECOMMENT ScriptAlias /cgi-bin/ /var/www/dev2-clarin/secure/
-        RewriteEngine On
-
-		# handle cmdi requests with redirects
-		# SEE SSL DEV-CLARIN ON GITHUB
-
-		RewriteCond %{HTTP_ACCESS} (.*cmdi.xml.*)
-		RewriteCond %{REQUEST_URI} ^(.*)/xmlui/handle/(.*)$
-		RewriteRule ^(.*)/xmlui/handle/(.*)$ https://dev2-clarin.ilc.cnr.it$1/oai/cite?metadataPrefix=cmdi&handle=$2 [R,L]
-
-		RewriteCond %{QUERY_STRING} format=cmdi [NC]
-		RewriteCond %{REQUEST_URI} ^(.*)/xmlui/handle/(.*)$
-		RewriteRule ^(.*)/xmlui/handle/(.*)$ https://dev2-clarin.ilc.cnr.it$1/oai/cite?metadataPrefix=cmdi&handle=$2 [R,L]
-
-		RewriteCond %{REQUEST_URI} ^/repository$
-		RewriteRule (.*) /repository/xmlui [R,L]
+		# THIS IS TO DECOMMENT AFTER SHIBBOLETH IS INSTALLED
+		#ScriptAlias /cgi-bin/ /var/www/dev2-clarin/secure/
+        
+		RewriteEngine On
 
 		# xsendfile
 		XSendFile On
-		XSendFilePath /opt/java/ilc4clarin-dspace/ilc4clarin/installations/assetstore/
+		
 
 		# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 		# error, crit, alert, emerg.
@@ -41,12 +29,9 @@
 		ErrorLog ${APACHE_LOG_DIR}/dev2-clarin-error.log
 		CustomLog ${APACHE_LOG_DIR}/dev2-clarin-access.log combined
 
-        #THIS IS TO DECOMMENT ProxyPass  /Shibboleth.sso !
+        #THIS IS TO DECOMMENT AFTER SHIBBOLETH IS INSTALLED
+		#ProxyPass  /Shibboleth.sso !
 
-        # These configurations say: By default, redirect ALL requests to port 8009
-        # (The port MUST match the port of your Tomcat AJP Connector. By default this usually is 8009)
-        ProxyPass         /repository  ajp://dev2-clarin.ilc.cnr.it:8009/repository
-        ProxyPassReverse  /repository  ajp://dev2-clarin.ilc.cnr.it:8009/repository
 
 
 		# For most configuration files from conf-available/, which are
@@ -163,8 +148,8 @@
 		#SSLOptions +FakeBasicAuth +ExportCertData +StrictRequire
 
 		# for testing purposes proxy 80 to 8080 for the manager GUI
-        ProxyPass         /manager/  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
-		ProxyPassReverse  /manager/  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
+        ProxyPass         /manager  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
+		ProxyPassReverse  /manager  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
 		ProxyPass         /host-manager  ajp://dev2-clarin.ilc.cnr.it:8009/host-manager
 		ProxyPassReverse  /host-manager  ajp://dev2-clarin.ilc.cnr.it:8009/host-manager
 
@@ -186,7 +171,7 @@
 		BrowserMatch "MSIE [17-9]" ssl-unclean-shutdown
 
 
-		#THIS IS TO DECOMMENT
+		#THIS IS TO DECOMMENT AFTER SHIBBOLETH IS INSTALLED
 		#include ../conf-enabled/shib-dev2-clarin.conf
  		
 
@@ -225,5 +210,3 @@
 
 	</VirtualHost>
 </IfModule>
-
-# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
