--- a/apache/dev/dev-clarin.it.ilc.cnr.it-ssl.conf
+++ b/apache/dev/dev-clarin.it.ilc.cnr.it-ssl.conf
@@ -1,5 +1,5 @@
 # after shibboleth is installed, 
-# 1 comment mod_ssl and decomment mod_shib
+# 1 comment mod_ssl and uncomment mod_shib
 # 2 decomment any section related to shib (see comments below)
 <IfModule mod_ssl.c>
 #<IfModule mod_shib>
@@ -10,26 +10,14 @@
         DocumentRoot /var/www/dev-clarin
 
 		        
-		#THIS IS TO DECOMMENT ScriptAlias /cgi-bin/ /var/www/dev-clarin/secure/
-        RewriteEngine On
-
-		# handle cmdi requests with redirects
-		# SEE SSL DEV-CLARIN ON GITHUB
-
-		RewriteCond %{HTTP_ACCESS} (.*cmdi.xml.*)
-		RewriteCond %{REQUEST_URI} ^(.*)/xmlui/handle/(.*)$
-		RewriteRule ^(.*)/xmlui/handle/(.*)$ https://dev-clarin.ilc.cnr.it$1/oai/cite?metadataPrefix=cmdi&handle=$2 [R,L]
-
-		RewriteCond %{QUERY_STRING} format=cmdi [NC]
-		RewriteCond %{REQUEST_URI} ^(.*)/xmlui/handle/(.*)$
-		RewriteRule ^(.*)/xmlui/handle/(.*)$ https://dev-clarin.ilc.cnr.it$1/oai/cite?metadataPrefix=cmdi&handle=$2 [R,L]
-
-		RewriteCond %{REQUEST_URI} ^/repository$
-		RewriteRule (.*) /repository/xmlui [R,L]
+		# THIS IS TO DECOMMENT AFTER SHIBBOLETH IS INSTALLED
+		#ScriptAlias /cgi-bin/ /var/www/dev-clarin/secure/
+        
+		RewriteEngine On
 
 		# xsendfile
 		XSendFile On
-		XSendFilePath /opt/java/ilc4clarin-dspace/ilc4clarin/installations/assetstore/
+		
 
 		# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 		# error, crit, alert, emerg.
@@ -41,12 +29,9 @@
 		ErrorLog ${APACHE_LOG_DIR}/dev-clarin-error.log
 		CustomLog ${APACHE_LOG_DIR}/dev-clarin-access.log combined
 
-        #THIS IS TO DECOMMENT ProxyPass  /Shibboleth.sso !
+        #THIS IS TO DECOMMENT AFTER SHIBBOLETH IS INSTALLED
+		#ProxyPass  /Shibboleth.sso !
 
-        # These configurations say: By default, redirect ALL requests to port 8009
-        # (The port MUST match the port of your Tomcat AJP Connector. By default this usually is 8009)
-        ProxyPass         /repository  ajp://dev-clarin.ilc.cnr.it:8009/repository
-        ProxyPassReverse  /repository  ajp://dev-clarin.ilc.cnr.it:8009/repository
 
 
 		# For most configuration files from conf-available/, which are
@@ -87,8 +72,15 @@
 		#   If both key and certificate are stored in the same file, only the
 		#   SSLCertificateFile directive is needed.
 
-		SSLCertificateFile    /etc/apache2/ssl/autofirmati/dev-clarin.crt
-		SSLCertificateKeyFile /etc/apache2/ssl/autofirmati/dev-clarin.key
+		#SSLCertificateFile    /etc/apache2/ssl/autofirmati/dev-clarin.crt
+		#SSLCertificateKeyFile /etc/apache2/ssl/autofirmati/dev-clarin.key
+
+		# LETSENCRYPT
+		SSLCertificateFile    /etc/letsencrypt/archive/dev-clarin.ilc.cnr.it/cert1.pem
+		SSLCertificateKeyFile /etc/letsencrypt/archive/dev-clarin.ilc.cnr.it/privkey1.pem
+
+
+
 
 		#   Server Certificate Chain:
 		#   Point SSLCertificateChainFile at a file containing the
@@ -154,18 +146,19 @@
 		#	 This enables optimized SSL connection renegotiation handling when SSL
 		#	 directives are used in per-directory context.
 		#SSLOptions +FakeBasicAuth +ExportCertData +StrictRequire
+
+		# for testing purposes proxy 80 to 8080 for the manager GUI
+        ProxyPass         /manager  ajp://dev-clarin.ilc.cnr.it:8009/manager/html
+		ProxyPassReverse  /manager  ajp://dev-clarin.ilc.cnr.it:8009/manager/html
+		ProxyPass         /host-manager  ajp://dev-clarin.ilc.cnr.it:8009/host-manager
+		ProxyPassReverse  /host-manager  ajp://dev-clarin.ilc.cnr.it:8009/host-manager
+
 		<FilesMatch "\.(cgi|shtml|phtml|php)$">
 				SSLOptions +StdEnvVars
 		</FilesMatch>
 		<Directory /usr/lib/cgi-bin>
 				SSLOptions +StdEnvVars
 		</Directory>
-
-		# for testing purposes proxy 80 to 8080 for the manager GUI
-        ProxyPass         /manager/  ajp://dev-clarin.ilc.cnr.it:8009/manager/html
-		ProxyPassReverse  /manager/  ajp://dev-clarin.ilc.cnr.it:8009/manager/html
-		ProxyPass         /host-manager  ajp://dev-clarin.ilc.cnr.it:8009/host-manager
-		ProxyPassReverse  /host-manager  ajp://dev-clarin.ilc.cnr.it:8009/host-manager
 
 		
 	
@@ -178,7 +171,7 @@
 		BrowserMatch "MSIE [17-9]" ssl-unclean-shutdown
 
 
-		#THIS IS TO DECOMMENT
+		#THIS IS TO DECOMMENT AFTER SHIBBOLETH IS INSTALLED
 		#include ../conf-enabled/shib-dev-clarin.conf
  		
 
@@ -217,5 +210,3 @@
 
 	</VirtualHost>
 </IfModule>
-
-# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
