--- a/apache/dev2/dev2-clarin.it.ilc.cnr.it.conf
+++ b/apache/dev2/dev2-clarin.it.ilc.cnr.it.conf
@@ -30,39 +30,12 @@
         Options +FollowSymLinks
         RewriteEngine on
 
-	# handle cmdi requests with redirects
-        RewriteCond %{HTTP_ACCESS} (.*cmdi.xml.*)
-        RewriteCond %{REQUEST_URI} ^(.*)/xmlui/handle/(.*)$
-        RewriteRule ^(.*)/xmlui/handle/(.*)$ https://dev2-clarin.ilc.cnr.it$1/oai/cite?metadataPrefix=cmdi&handle=$2 [R,L]
-
-        RewriteCond %{QUERY_STRING} format=cmdi [NC]
-        RewriteCond %{REQUEST_URI} ^(.*)/xmlui/handle/(.*)$
-        RewriteRule ^(.*)/xmlui/handle/(.*)$ https://dev2-clarin.ilc.cnr.it$1/oai/cite?metadataPrefix=cmdi&handle=$2 [R,L]
-
-
-	ProxyPass         /repository  ajp://dev2-clarin.ilc.cnr.it:8009/repository
-	ProxyPassReverse  /repository  ajp://dev2-clarin.ilc.cnr.it:8009/repository
 	
 	# for testing purposes proxy 80 to 8080 for the manager GUI
-        ProxyPass         /manager/  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
-	ProxyPassReverse  /manager/  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
+        ProxyPass         /manager  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
+	ProxyPassReverse  /manager  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
 	ProxyPass         /host-manager  ajp://dev2-clarin.ilc.cnr.it:8009/host-manager
 	ProxyPassReverse  /host-manager  ajp://dev2-clarin.ilc.cnr.it:8009/host-manager
 	
-
-
-	#RewriteLog "/var/log/apache2/rewrite.log"
-	#RewriteLogLevel 3
-
-
-	RewriteCond %{HTTPS} off
-
-	RewriteCond %{REQUEST_URI} ^/repository$
-	RewriteRule (.*)  https://%{SERVER_NAME}/repository/xmlui [R,L]
-
-
-	RewriteCond %{REQUEST_URI} !^/repository/oai$
-	RewriteCond %{REQUEST_URI} !^/repository/oai.+$
-	#RewriteRule (.*) https://%{SERVER_NAME}$1 [R,L]
 </VirtualHost>
 
