tested integration tomcat-apache-shibboleth

--- a/apache/dev2/dev2-clarin.it.ilc.cnr.it-ssl.conf
+++ b/apache/dev2/dev2-clarin.it.ilc.cnr.it-ssl.conf
@@ -5,12 +5,12 @@
 #<IfModule mod_shib>
 	<VirtualHost *:443>
 		ServerName dev2-clarin.ilc.cnr.it
-	    ServerAlias dev2-clarin.ilc.cnr.it
-        ServerAdmin webmaster@localhost
-        DocumentRoot /var/www/dev2-clarin
+	        ServerAlias dev2-clarin.ilc.cnr.it
+		ServerAdmin webmaster@localhost
+		DocumentRoot /var/www/dev2-clarin
 
 		        
-		# THIS IS TO DECOMMENT AFTER SHIBBOLETH IS INSTALLED
+		# THIS IS TO UNCOMMENT AFTER SHIBBOLETH IS INSTALLED
 		#ScriptAlias /cgi-bin/ /var/www/dev2-clarin/secure/
         
 		RewriteEngine On
@@ -29,7 +29,7 @@
 		ErrorLog ${APACHE_LOG_DIR}/dev2-clarin-error.log
 		CustomLog ${APACHE_LOG_DIR}/dev2-clarin-access.log combined
 
-        #THIS IS TO DECOMMENT AFTER SHIBBOLETH IS INSTALLED
+        	#THIS IS TO UNCOMMENT AFTER SHIBBOLETH IS INSTALLED
 		#ProxyPass  /Shibboleth.sso !
 
 
@@ -92,7 +92,7 @@
 		#SSLCertificateChainFile /etc/apache2/ssl.crt/server-ca.crt
 
 		#SSLCertificateChainFile /etc/apache2/ssl/dev2-clarin_ilc_cnr_it/DigiCertCA.crt
-###             SSLCertificateChainFile /etc/apache2/ssl/lets-ca.pem
+		#SSLCertificateChainFile /etc/apache2/ssl/lets-ca.pem
 
 		#   Certificate Authority (CA):
 		#   Set the CA certificate verification path where to find CA
@@ -148,7 +148,7 @@
 		#SSLOptions +FakeBasicAuth +ExportCertData +StrictRequire
 
 		# for testing purposes proxy 80 to 8080 for the manager GUI
-        ProxyPass         /manager  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
+        	ProxyPass         /manager  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
 		ProxyPassReverse  /manager  ajp://dev2-clarin.ilc.cnr.it:8009/manager/html
 		ProxyPass         /host-manager  ajp://dev2-clarin.ilc.cnr.it:8009/host-manager
 		ProxyPassReverse  /host-manager  ajp://dev2-clarin.ilc.cnr.it:8009/host-manager
@@ -171,8 +171,8 @@
 		BrowserMatch "MSIE [17-9]" ssl-unclean-shutdown
 
 
-		#THIS IS TO DECOMMENT AFTER SHIBBOLETH IS INSTALLED
-		#include ../conf-enabled/shib-dev2-clarin.conf
+		#THIS IS TO UNCOMMENT AFTER SHIBBOLETH IS INSTALLED
+		#include conf-enabled/shib-dev2-clarin.conf
  		
 
 
