--- a/apache/dev/shib-dev-clarin.conf
+++ b/apache/dev/shib-dev-clarin.conf
@@ -23,19 +23,7 @@
 		require valid-user
 	</Location>
 
-	<Location "/perl">
-		AuthType shibboleth
-		ShibRequireSession On
-		# Please note that setting ShibUseHeaders to "On" is a potential security risk. 
-		# You may wish to set it to "Off". See the mod_shib docs for details about this setting:
-		# https://wiki.shibboleth.net/confluence/display/SHIB2/NativeSPApacheConfig#NativeSPApacheConfig-AuthConfigOptions
-		# Here's a good guide to configuring Apache + Tomcat when this setting is "Off": 
-		# https://www.switch.ch/de/aai/support/serviceproviders/sp-access-rules.html#javaapplications
-		ShibUseHeaders On
-		require valid-user
-	   #  ShibRequestSetting applicationId dev-clarin.ilc.cnr.it
-		require valid-user
-	</Location>
+
 	<Directory "/piwik">
 		AllowOverride Limit
 		Order allow,deny
@@ -56,26 +44,37 @@
 	<Directory "/var/www/dev-clarin/perl">
 		AllowOverride None
 		Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
-		AddHandler cgi-script .pl
+		AddHandler cgi-script .php
 		Order allow,deny
 		allow from all
 	</Directory>
-	<Location /perl>
-		AuthType shibboleth
-		  ShibRequestSetting requireSession 1
-		  ShibRequestSetting exportAssertion 1
-		  require shibboleth
+        <Location /perl>
+                  AuthType shibboleth
+                  ShibRequestSetting requireSession 1
+                  ShibRequestSetting exportAssertion 1
+                  require shibboleth
+                  ShibRequestSetting applicationId dev-clarin.ilc.cnr.it
+                  AuthType shibboleth
+                  ShibRequireSession On
+                  # Please note that setting ShibUseHeaders to "On" is a potential security risk. 
+                  # You may wish to set it to "Off". See the mod_shib docs for details about this setting:
+                  # https://wiki.shibboleth.net/confluence/display/SHIB2/NativeSPApacheConfig#NativeSPApacheConfig-AuthConfigOptions
+                  # Here's a good guide to configuring Apache + Tomcat when this setting is "Off": 
+                  # https://www.switch.ch/de/aai/support/serviceproviders/sp-access-rules.html#javaapplications
+                  ShibUseHeaders On
+                  require valid-user
+                  ShibRequestSetting applicationId dev-clarin.ilc.cnr.it
 
-		  Options +ExecCGI
-		  AddHandler cgi-script .pl
-		  DirectoryIndex shib_test.pl
+                  Options +ExecCGI
+                  AddHandler cgi-script .php
+                  DirectoryIndex shib_test.php
 
-		  # Examples for customizing script	  
-		  # SetEnv SHIBTEST_ATTRIBUTES_REQUIRED "eduPersonPrincipalName:eppn eduPersonTargetedID:persistent_id"	  
-		  # SetEnv SHIBTEST_ATTRIBUTES_OPTIONAL "eduPersonScopedAffiliation:affiliation:eduPersonAffiliation cn displayName"
-		  # Uncomment the following, if you want to enable support for lazy session instantiation
-		  # SetENV SHIBTEST_LAZY true
-		  # These are usually guessed correctly by the script, but adjust to you local URIs for lazy session instantiation	  
-		  # SetEnv SHIBTEST_LOGIN_URI  "https://sp.example.org/Shibboleth.sso/Login"	  
-		  # SetEnv SHIBTEST_LOGOUT_URI "https://sp.example.org/Shibboleth.sso/Logout"
-	</Location>
+                  # Examples for customizing script       
+                  # SetEnv SHIBTEST_ATTRIBUTES_REQUIRED "eduPersonPrincipalName:eppn eduPersonTargetedID:persistent_id"   
+                  # SetEnv SHIBTEST_ATTRIBUTES_OPTIONAL "eduPersonScopedAffiliation:affiliation:eduPersonAffiliation cn displayName"
+                  # Uncomment the following, if you want to enable support for lazy session instantiation
+                  # SetENV SHIBTEST_LAZY true
+                  # These are usually guessed correctly by the script, but adjust to you local URIs for lazy session instantiation        
+                  # SetEnv SHIBTEST_LOGIN_URI  "https://sp.example.org/Shibboleth.sso/Login"      
+                  # SetEnv SHIBTEST_LOGOUT_URI "https://sp.example.org/Shibboleth.sso/Logout"
+        </Location>
