added handle server

--- a/apache/dev/dev-clarin.it.ilc.cnr.it-ssl.conf
+++ b/apache/dev/dev-clarin.it.ilc.cnr.it-ssl.conf
@@ -5,9 +5,9 @@
 #<IfModule mod_shib>
 	<VirtualHost *:443>
 		ServerName dev-clarin.ilc.cnr.it
-	    ServerAlias dev-clarin.ilc.cnr.it
-        ServerAdmin webmaster@localhost
-        DocumentRoot /var/www/dev-clarin
+	    	ServerAlias dev-clarin.ilc.cnr.it
+        	ServerAdmin webmaster@localhost
+        	DocumentRoot /var/www/dev-clarin
 
 		        
 		# THIS IS TO DECOMMENT AFTER SHIBBOLETH IS INSTALLED
@@ -29,7 +29,7 @@
 		ErrorLog ${APACHE_LOG_DIR}/dev-clarin-error.log
 		CustomLog ${APACHE_LOG_DIR}/dev-clarin-access.log combined
 
-        #THIS IS TO DECOMMENT AFTER SHIBBOLETH IS INSTALLED
+        	#THIS IS TO DECOMMENT AFTER SHIBBOLETH IS INSTALLED
 		#ProxyPass  /Shibboleth.sso !
 
 
@@ -72,8 +72,8 @@
 		#   If both key and certificate are stored in the same file, only the
 		#   SSLCertificateFile directive is needed.
 
-		#SSLCertificateFile    /etc/apache2/ssl/autofirmati/dev-clarin.crt
-		#SSLCertificateKeyFile /etc/apache2/ssl/autofirmati/dev-clarin.key
+		#SSLCertificateFile    /etc/apache2/ssl/selfsigned/dev-clarin.crt
+		#SSLCertificateKeyFile /etc/apache2/ssl/selfsigned/dev-clarin.key
 
 		# LETSENCRYPT
 		SSLCertificateFile    /etc/letsencrypt/archive/dev-clarin.ilc.cnr.it/cert1.pem
@@ -148,7 +148,7 @@
 		#SSLOptions +FakeBasicAuth +ExportCertData +StrictRequire
 
 		# for testing purposes proxy 80 to 8080 for the manager GUI
-        ProxyPass         /manager  ajp://dev-clarin.ilc.cnr.it:8009/manager/html
+        	ProxyPass         /manager  ajp://dev-clarin.ilc.cnr.it:8009/manager/html
 		ProxyPassReverse  /manager  ajp://dev-clarin.ilc.cnr.it:8009/manager/html
 		ProxyPass         /host-manager  ajp://dev-clarin.ilc.cnr.it:8009/host-manager
 		ProxyPassReverse  /host-manager  ajp://dev-clarin.ilc.cnr.it:8009/host-manager
@@ -172,7 +172,7 @@
 
 
 		#THIS IS TO DECOMMENT AFTER SHIBBOLETH IS INSTALLED
-		#include ../conf-enabled/shib-dev-clarin.conf
+		#include conf-enabled/shib-dev-clarin.conf
  		
 
 
