--- a/apache/dspace/shib-dspace-clarin-it.conf
+++ b/apache/dspace/shib-dspace-clarin-it.conf
@@ -53,33 +53,33 @@
 		PerlSendHeader On
 	</Files>
 
-	<Directory "/var/www/dspace-clarin-it/perl">
-		AllowOverride None
-		Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
-		AddHandler cgi-script .php
-		Order allow,deny
-		allow from all
-	</Directory>
-        <Location /perl>
-                  AuthType shibboleth
-                  ShibRequestSetting requireSession 1
-                  ShibRequestSetting exportAssertion 1
-                  require shibboleth
-                  ShibRequestSetting applicationId dspace-clarin-it.ilc.cnr.it
-                  AuthType shibboleth
-                  ShibRequireSession On
+	#<Directory "/var/www/dspace-clarin-it/perl">
+	#	AllowOverride None
+	#	Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
+	#	AddHandler cgi-script .php
+	#	Order allow,deny
+	#	allow from all
+	#</Directory>
+        #<Location /perl>
+        #         AuthType shibboleth
+        #          ShibRequestSetting requireSession 1
+        #          ShibRequestSetting exportAssertion 1
+        #          require shibboleth
+        #          ShibRequestSetting applicationId dspace-clarin-it.ilc.cnr.it
+        #          AuthType shibboleth
+        #          ShibRequireSession On
                   # Please note that setting ShibUseHeaders to "On" is a potential security risk. 
                   # You may wish to set it to "Off". See the mod_shib docs for details about this setting:
                   # https://wiki.shibboleth.net/confluence/display/SHIB2/NativeSPApacheConfig#NativeSPApacheConfig-AuthConfigOptions
                   # Here's a good guide to configuring Apache + Tomcat when this setting is "Off": 
                   # https://www.switch.ch/de/aai/support/serviceproviders/sp-access-rules.html#javaapplications
-                  ShibUseHeaders On
-                  require valid-user
-                  ShibRequestSetting applicationId dspace-clarin-it.ilc.cnr.it
+        #          ShibUseHeaders On
+        #          require valid-user
+        #          ShibRequestSetting applicationId dspace-clarin-it.ilc.cnr.it
 
-                  Options +ExecCGI
-                  AddHandler cgi-script .php
-                  DirectoryIndex shib_test.php
+        #          Options +ExecCGI
+        #          AddHandler cgi-script .php
+        #          DirectoryIndex shib_test.php
 
                   # Examples for customizing script       
                   # SetEnv SHIBTEST_ATTRIBUTES_REQUIRED "eduPersonPrincipalName:eppn eduPersonTargetedID:persistent_id"   
@@ -89,4 +89,16 @@
                   # These are usually guessed correctly by the script, but adjust to you local URIs for lazy session instantiation        
                   # SetEnv SHIBTEST_LOGIN_URI  "https://sp.example.org/Shibboleth.sso/Login"      
                   # SetEnv SHIBTEST_LOGOUT_URI "https://sp.example.org/Shibboleth.sso/Logout"
-        </Location>on>
+        #</Location>
+	<Location "/perl">
+		AuthType shibboleth
+		ShibRequireSession On
+		# Please note that setting ShibUseHeaders to "On" is a potential security risk. 
+		# You may wish to set it to "Off". See the mod_shib docs for details about this setting:
+		# https://wiki.shibboleth.net/confluence/display/SHIB2/NativeSPApacheConfig#NativeSPApacheConfig-AuthConfigOptions
+		# Here's a good guide to configuring Apache + Tomcat when this setting is "Off": 
+		# https://www.switch.ch/de/aai/support/serviceproviders/sp-access-rules.html#javaapplications
+		ShibUseHeaders On
+		require valid-user
+	        ShibRequestSetting applicationId dspace-clarin-it.ilc.cnr.it-override
+	</Location>
